# Airflow-organization-prediction

./: .gitignore  Forward calculation.ipynb  data_preview.ipynb  demo.ipynb  demo.py  graph.html  main.ipynb  main.py  pyproject.toml  streamlit-web.py  web.py
archive/: dataset.py  loss_function.py  model.py  train.py
demo/: test.ipynb
utils/: Forward_Calculation.py  dataset.py  model.py  network.py  train.py  webpage.py
utils/module/: UNet_v2.py  __init__.py  datasets.py  loss_function.py  postprocessing.py  train.py  unetplusplus.py
utils/web/: Forward_Calculation.py  webpage.py
