[tool.poetry]
name = "airflow organization prediction"
version = "0.1.0"
description = "A visualization page for calculating ventilation nodes"
authors = ["pan-b <'zhen_yu_@outlook.com'>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
numpy = "^1.26.0"
streamlit = "^1.27.1"
scipy = "^1.11.3"
networkx = "^3.1"
ipykernel = "^6.26.0"
ipywidgets = "^8.1.1"
torch = { url = "https://download.pytorch.org/whl/cu121/torch-2.1.0%2Bcu121-cp310-cp310-win_amd64.whl"}
torchvision = { url = "https://download.pytorch.org/whl/cu121/torchvision-0.16.0%2Bcu121-cp310-cp310-win_amd64.whl"}
torchaudio = { url = "https://download.pytorch.org/whl/cu121/torchaudio-2.1.0%2Bcu121-cp310-cp310-win_amd64.whl"}
matplotlib = "^3.8.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
